--- a/.github/goTest.yml
+++ b/.github/goTest.yml
@@ -1,10 +1,12 @@
 name: Test
 
 on: 
-  push:
+  # push:
+  #   branches:
+  #     - master
+  pull_request:
     branches:
       - master
-  pull_request:
 
 jobs:
   # This is for linting the go files
