--- a/.github/workflows/goTest.yml
+++ b/.github/workflows/goTest.yml
@@ -9,28 +9,12 @@ on:
       - master
 
 jobs:
-  # This is for linting the go files
-  lint:
-    name: Lint
-    strategy:
-      matrix:
-        os: 
-          - macos
-          - ubuntu 
-          - windows 
-    runs-on: ${{ matrix.os }}-latest
-    steps:
-      - uses: actions/checkout@v2.3.4
-
-      - uses: golangci/golangci-lint-action@v2.5.1
-
   test:
     strategy:
       matrix:
         go-version:
-          - 1.14.x
-          - 1.15.x
-          - 1.16.x
+          - 1.15
+          - 1.16
         os: 
           - macos
           - ubuntu 
@@ -47,9 +31,21 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v2.1.3
       with:
+        stable: false
         go-version: ${{ matrix.go-version }}
     - name: Checkout code
       uses: actions/checkout@v2
 
     - name: Test
       run: go test ./...
+      env:
+          GOARCH: ${{ matrix.goarch }}
+          GOPROXY: off
+
+  lint:
+    name: lint
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2.3.4
+
+      - uses: golangci/golangci-lint-action@v2.5.1
