--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "src/web/pages",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cd src/web && next dev",
     "build": "next build",
     "start": "next start"
   },
