--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "src/web/pages",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
+    "dev": "cd src/web && next dev",
+    "build": "cd src/web && next build",
+    "start": "cd src/web && next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/icons": "^4.11.2",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "^10.0.0",
