--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "main": "src/web/pages",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "cd src/web && next dev",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "^10.0.0",
