--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@material-ui/core": "^4.11.3",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
+    "material-ui-image": "^3.3.1",
     "next": "^10.0.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
