--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fontsource/poppins": "^4.2.1",
     "@material-ui/core": "^4.11.3",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
