--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "main": "src/web/pages",
   "private": true,
   "scripts": {
-    "dev": "next dev src/web",
-    "build": "next build src/web",
-    "start": "next start src/web"
+    "dev": "cd src/web && next dev",
+    "build": "next build",
+    "start": "next start"
   },
   "dependencies": {
+    "@fontsource/poppins": "^4.2.1",
+    "@material-ui/core": "^4.11.3",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "material-ui-image": "^3.3.1",
