--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "editor.formatOnSave": true,
-    "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true
-    },
-    
-  }
+    "editor.codeActionsOnSave":
+    {
+      "source.fixAll.eslint": true,
+    },    
+}
   
