--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
     "editor.formatOnSave": true,
     "editor.codeActionsOnSave":
     {
-      "source.fixAll.eslint": true,
-    },    
+      "source.fixAll.eslint": true
+    }    
 }
   
