--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -3,7 +3,7 @@ on:
   issue_comment:
     types: [created]
   pull_request:
-    types: [opened,closed]
+    types: [opened,closed,synchronize]
 
 jobs:
   CLABoardly:
@@ -14,8 +14,5 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          path-to-signatures: 'signatures/version1/cla.json'
-          url-to-cladocument: ''
-          branch: 'master'
+          url-to-cladocument: 'https://github.com/WuraLab/Boardly/blob/master/LICENSE'
           whitelist: bot
-          blockchain-storage-flag: false
