--- a/.github/workflows/cla.yml
+++ b/.github/workflows/cla.yml
@@ -1,21 +1,25 @@
-name: "CLA Signature Bot"
+name: "CLA Assistant"
 on:
   issue_comment:
     types: [created]
-  pull_request:
+  pull_request_target:
     types: [opened,closed,synchronize]
 
 jobs:
-  CLABoardly:
+  CLAssistant:
     runs-on: ubuntu-latest
     steps:
-      - name: "CLA Signature Boardly"
-        uses: roblox/cla-signature-bot@v2.0.1
+      - name: "CLA Assistant"
+        if: (github.event.comment.body == 'recheck' || github.event.comment.body == 'I have read the CLA Document and I hereby sign the CLA') || github.event_name == 'pull_request_target'
+        # Beta Release
+        uses: cla-assistant/github-action@v2.1.2-beta
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          # the below token should have repo scope and must be manually added by you in the repository's secret
+          PERSONAL_ACCESS_TOKEN : ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         with:
           path-to-signatures: 'signatures/version1/cla.json'
-          branch: signature
-          url-to-cladocument: 'https://github.com/WuraLab/Boardly/blob/master/LICENSE'
-          whitelist: bot
-          blockchain-storage-flag: false
+          path-to-document: 'https://github.com/WuraLab/Boardly/blob/master/LICENSE' # e.g. a CLA or a DCO document
+          # branch should not be protected
+          branch: 'signature'
+          allowlist: wuralab-bot
