--- a/.env
+++ b/.env
@@ -11,3 +11,7 @@ JWT_SECRET="changeme"
 
 SENDGRID_API_KEY=""
 SENDGRID_FROM_MAIL="www.boardly.com"
+
+EMAIL_USER="ademicheal2019@gmail.com"
+EMAIL_PASSWORD=""
+SET_EMAIL_FROM="FROM BOARDLY"
