--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "build": "next build src/web",
     "start": "next start"
   },
+  "engines": {
+    "node": ">=0.14.1 <15"
+  },
   "dependencies": {
     "@fontsource/poppins": "^4.2.2",
     "@material-ui/core": "^4.11.3",
