--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@material-ui/icons": "^4.11.2",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
+    "material-table": "^1.69.2",
     "material-ui-image": "^3.3.1",
     "next": "^10.0.0",
     "next-images": "^1.7.0",
