--- a/.env
+++ b/.env
@@ -3,8 +3,6 @@ DB_PORT="5432"
 DB_USER="root"
 DB_PASSWORD="password"
 DB_NAME="boardly"
-
-SERVER_HOST="localhost"
+SERVER_HOST="127.0.0.1"
 SERVER_PORT="8080"
-
 JWT_SECRET="changeme"
