--- a/.env
+++ b/.env
@@ -8,3 +8,7 @@ SERVER_HOST="localhost"
 SERVER_PORT="8080"
 
 JWT_SECRET="changeme"
+
+
+CASBIN_MODEL="src/backend/data/authz_model.conf"
+CASBIN_POLICY="src/backend/data/authz_policy.csv"
