--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -26,7 +26,7 @@ jobs:
       with:
         name:  WuraLab/boardly/api
         registry: docker.pkg.github.com
-        username: ${{ secrets.USERNAME_GITHUB }}
+        username: ${{ secrets.GHA_GITHUB_USERNAME }}
         password: ${{ secrets.GITHUB_TOKEN }}
         dockerfile: ../../src/backend/Dockerfile
         tags: "latest,v1,v2"
@@ -36,7 +36,7 @@ jobs:
       with:
         name:  WuraLab/boardly/web
         registry: docker.pkg.github.com
-        username: ${{ secrets.USERNAME_GITHUB }}
+        username: ${{ secrets.GHA_GITHUB_USERNAME }}
         password: ${{ secrets.GITHUB_TOKEN }}
         dockerfile: ./../src/web/Dockerfile
         tags: "latest,v1,v2"
