--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   db:
-    image: postgres
+    image: postgres:alpine
     restart: always
     ports:
       - 5432:5432
@@ -30,8 +30,3 @@ services:
       - 3000:3000
     depends_on:
       - api
-  ubuntu:
-    container_name: ubuntu
-    image: ubuntu
-    restart: on-failure
-    command: ["sleep","infinity"]
