--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -24,3 +24,8 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
         command: monitor
+        
+    - name: Upload result to GitHub Code Scanning
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+          sarif_file: snyk.sarif
