--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,11 +32,20 @@
 #           sarif_file: snyk.sarif
 
 
-name: Example workflow for Golang using Snyk
-on: push
+name: Backend workflow for Golang using Snyk
+on:
+  push:
+    branches: [ master ]
+  pull_request:
+    branches: [ master ]
+    
 jobs:
   security:
     runs-on: ubuntu-latest
+    strategy:
+       matrix:
+          go-version: [1.13, 1.14, 1.15, 1.x]
+          
     steps:
       - uses: actions/checkout@master
       - name: Run Snyk to check for vulnerabilities
@@ -46,6 +55,8 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --sarif-file-output=snyk.sarif
+          go-version: ${{ matrix.go-version }}
+          
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v1
         with:
