--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,50 +1,11 @@
-
-# name: Backend workflow for Golang using Snyk
-
-# on:
-#   push:
-#     branches: [ master ]
-#   pull_request:
-#     branches: [ master ]
-    
-# jobs:
-#    security::
-#     runs-on: ubuntu-latest
-#     strategy:
-#        matrix:
-#          go-version: [1.13, 1.14, 1.15, 1.x]
-         
-         
-#     steps:
-#       - uses: actions/checkout@master
-#       - name: Run Snyk to check for vulnerabilities
-#         uses: snyk/actions/golang@master
-#         continue-on-error: true # To make sure that SARIF upload gets called
-#         env:
-#           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-#         with:
-#           args: --sarif-file-output=snyk.sarif
-#           go-version: ${{ matrix.go-version }}
-
-#       - name: Upload result to GitHub Code Scanning
-#         uses: github/codeql-action/upload-sarif@v1
-#         with:
-#           sarif_file: snyk.sarif
-
-
-name: Backend workflow for Golang using Snyk
+name: vulnerability test
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
     
 jobs:
   security:
     runs-on: ubuntu-latest
-    strategy:
-       matrix:
-          go-version: [1.13, 1.14, 1.15, 1.x]
           
     steps:
       - uses: actions/checkout@master
@@ -55,7 +16,6 @@ jobs:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
         with:
           args: --sarif-file-output=snyk.sarif
-          go-version: ${{ matrix.go-version }}
           
       - name: Upload result to GitHub Code Scanning
         uses: github/codeql-action/upload-sarif@v1
