--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,19 +1,13 @@
 
-name: Web vulnerability workflow using Snyk
+name: vulnerability scan
 
 on:
-  push:
-    branches: [ master ]
   pull_request:
     branches: [ master ]
 
 jobs:
   security:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [10.x, 12.x, 14.x, 15.x]
-        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
     - uses: actions/checkout@master
@@ -23,8 +17,7 @@ jobs:
       env:
           SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
       with:
-        node-version: ${{ matrix.node-version }}
-        command: monitor
+        args: --sarif-file-output=snyk.sarif
         
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v1
