--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "editor.codeActionsOnSave":
     {
       "source.fixAll.eslint": true
-    }    
+    },
+    "git.ignoreLimitWarning": true
 }
   
