--- a/.github/workflows/appTest.yml
+++ b/.github/workflows/appTest.yml
@@ -6,7 +6,7 @@ on:
       - master
 
 jobs:
-  test:
+  goTest:
     strategy:
       matrix:
         go-version:
@@ -43,3 +43,31 @@ jobs:
       - uses: actions/checkout@v2.3.4
 
       - uses: golangci/golangci-lint-action@v2.5.1
+
+
+  nextBuild:
+    strategy:
+      matrix:
+        node-version:
+          - 12.x
+        os: 
+          - ubuntu 
+    runs-on: ${{ matrix.os }}-latest
+
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v2.1.5
+      with:
+        node-version: ${{ matrix.node-version }}
+    - name: npm install, build, and test
+      run: |
+        npm install
+        npm run build --if-present
+        npm test
+      env:
+        CI: true
+    - name: Upload coverage to Codecov
+      run: bash <(curl -s https://codecov.io/bash)
