--- a/.github/workflows/appBuild.yml
+++ b/.github/workflows/appBuild.yml
@@ -25,6 +25,8 @@ jobs:
         go-version: ${{ matrix.go-version }}
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
     - name: Build the docker-compose stack
       run: docker-compose --env-file .test.env up -d
     - name: Check running containers
