--- a/.github/workflows/appBuild.yml
+++ b/.github/workflows/appBuild.yml
@@ -59,6 +59,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0
 
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2.1.5
