--- a/.github/workflows/appBuild.yml
+++ b/.github/workflows/appBuild.yml
@@ -73,5 +73,9 @@ jobs:
         npm test
       env:
         CI: true
+    - name: Build the docker-compose stack
+      run: docker-compose --env-file .test.env up -d
+    - name: Check running containers
+      run: docker ps -a
     - name: Upload coverage to Codecov
       run: bash <(curl -s https://codecov.io/bash)
